-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
Windows
-
dfaffcbf2a20cd7ff781de88ac3e73d9f17d1cdf
Qt socket communication fails randomly and outputs this debug message:
The following error occurred:
QWindowsPipeReader::completeAsyncRead: Unknown error 995.
This has been tested with both QTcpSocket and QLocalSocket. It is reproducible with Qt's Fortune Client example, but it needs several tries and a good fortune. Therefore please find attached a modified Fortune example (qtbug48336.zip), which reproduces the problem every time.
This problem seems to be caused by https://codereview.qt-project.org/#/c/110534/, which fixes QTBUG-45601. Reverting the change (or the QWindowsPipeReader::stop() part of it) seems to fix the problem.
For Gerrit Dashboard: QTBUG-48336 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
139527,3 | QWindowsPipeReader: fix occasional "Unknown error 995" | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |